--- a/main.html
+++ b/main.html
@@ -59,8 +59,14 @@
 				</ul>
 			</div>
 			<div class="description">
-				
+				<h3>BENEFITS</h3>
+				<ul>
+					<li>Apples are nutricious</li>
+					<li>Bla bla bla...</li>
+					<li>Bla bla bla...</li>
+					<li>Bla bla bla...</li>
 			</div>
+			<button type="submit">ADD TO CART</button>
 		</div>
 	</section>
 </body>
